Hide location bar focus ring for popup windows.

Popup windows display a selectable but non-editable location bar which should not display a focus ring. This was not an issue prior to material refresh, as the location bar displayed a focus ring only on mac.

Bug: 856909
Change-Id: I5060e57546923a2e53bdd20bcd0c20dde7925bb0
Reviewed-on: https://chromium-review.googlesource.com/1144204
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Reviewed-by: Tommy Li <tommycli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#576607}
Former-commit-id: 59e6433d511beea5f4ec861d87f7677a53a638c4